// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parsers > cfAccountInfo > parses the latest cfAccountInfo schema for an lp 1`] = `
{
  "asset_balances": {
    "Arbitrum": {
      "ETH": 0n,
      "USDC": 0n,
    },
    "Assethub": {
      "DOT": 0n,
      "USDC": 0n,
      "USDT": 0n,
    },
    "Bitcoin": {
      "BTC": 19842n,
    },
    "Ethereum": {
      "ETH": 0n,
      "FLIP": 0n,
      "USDC": 0n,
      "USDT": 0n,
      "WBTC": 0n,
    },
    "Solana": {
      "SOL": 0n,
      "USDC": 0n,
    },
  },
  "bond": 0n,
  "boost_balances": {
    "Arbitrum": {
      "ETH": [],
      "USDC": [],
    },
    "Assethub": {
      "DOT": [],
      "USDC": [],
      "USDT": [],
    },
    "Bitcoin": {
      "BTC": [
        {
          "available_balance": 200000000n,
          "fee_tier": 5,
          "in_use_balance": 0n,
          "is_withdrawing": false,
          "total_balance": 200000000n,
        },
        {
          "available_balance": 200000000n,
          "fee_tier": 10,
          "in_use_balance": 0n,
          "is_withdrawing": false,
          "total_balance": 200000000n,
        },
        {
          "available_balance": 200000000n,
          "fee_tier": 30,
          "in_use_balance": 0n,
          "is_withdrawing": false,
          "total_balance": 200000000n,
        },
      ],
    },
    "Ethereum": {
      "ETH": [],
      "FLIP": [],
      "USDC": [],
      "USDT": [],
      "WBTC": [],
    },
    "Solana": {
      "SOL": [],
      "USDC": [],
    },
  },
  "collateral_balances": [],
  "earned_fees": {
    "Arbitrum": {
      "ETH": 0n,
      "USDC": 0n,
    },
    "Assethub": {
      "DOT": 0n,
      "USDC": 0n,
      "USDT": 0n,
    },
    "Bitcoin": {
      "BTC": 0n,
    },
    "Ethereum": {
      "ETH": 0n,
      "FLIP": 0n,
      "USDC": 0n,
      "USDT": 0n,
      "WBTC": 0n,
    },
    "Solana": {
      "SOL": 0n,
      "USDC": 0n,
    },
  },
  "estimated_redeemable_balance": 99999975540394000000n,
  "flip_balance": 99999975540394000000n,
  "lending_positions": [
    {
      "asset": "BTC",
      "available_amount": 200000000n,
      "chain": "Bitcoin",
      "total_amount": 200000000n,
    },
  ],
  "refund_addresses": {
    "Arbitrum": null,
    "Assethub": null,
    "Bitcoin": "bc1qqt3juqef9azhd0zeuamu9c30pg5xdllvmks2ja",
    "Ethereum": "0xacd7c0481fc71dce9e3e8bd4cca5828ce8302629",
    "Solana": "7zLEfU3nQKqnfrN2A5yNEiFd1Vt9D7maVaoSAV8invMT",
  },
  "role": "liquidity_provider",
  "vanity_name": "Chainflip Testnet LP BOOST",
}
`;

exports[`parsers > cfAccountInfo > parses the latest cfAccountInfo schema for an lp on networks that haven't been upgraded yet 1`] = `
{
  "asset_balances": {
    "Arbitrum": {
      "ETH": 0n,
      "USDC": 0n,
    },
    "Assethub": {
      "DOT": 0n,
      "USDC": 0n,
      "USDT": 0n,
    },
    "Bitcoin": {
      "BTC": 19842n,
    },
    "Ethereum": {
      "ETH": 0n,
      "FLIP": 0n,
      "USDC": 0n,
      "USDT": 0n,
      "WBTC": 0n,
    },
    "Solana": {
      "SOL": 0n,
      "USDC": 0n,
    },
  },
  "bond": 0n,
  "boost_balances": {
    "Arbitrum": {
      "ETH": [],
      "USDC": [],
    },
    "Assethub": {
      "DOT": [],
      "USDC": [],
      "USDT": [],
    },
    "Bitcoin": {
      "BTC": [
        {
          "available_balance": 200000000n,
          "fee_tier": 5,
          "in_use_balance": 0n,
          "is_withdrawing": false,
          "total_balance": 200000000n,
        },
        {
          "available_balance": 200000000n,
          "fee_tier": 10,
          "in_use_balance": 0n,
          "is_withdrawing": false,
          "total_balance": 200000000n,
        },
        {
          "available_balance": 200000000n,
          "fee_tier": 30,
          "in_use_balance": 0n,
          "is_withdrawing": false,
          "total_balance": 200000000n,
        },
      ],
    },
    "Ethereum": {
      "ETH": [],
      "FLIP": [],
      "USDC": [],
      "USDT": [],
      "WBTC": [],
    },
    "Solana": {
      "SOL": [],
      "USDC": [],
    },
  },
  "collateral_balances": undefined,
  "earned_fees": {
    "Arbitrum": {
      "ETH": 0n,
      "USDC": 0n,
    },
    "Assethub": {
      "DOT": 0n,
      "USDC": 0n,
      "USDT": 0n,
    },
    "Bitcoin": {
      "BTC": 0n,
    },
    "Ethereum": {
      "ETH": 0n,
      "FLIP": 0n,
      "USDC": 0n,
      "USDT": 0n,
      "WBTC": 0n,
    },
    "Solana": {
      "SOL": 0n,
      "USDC": 0n,
    },
  },
  "estimated_redeemable_balance": 99999975540394000000n,
  "flip_balance": 99999975540394000000n,
  "lending_positions": undefined,
  "refund_addresses": {
    "Arbitrum": null,
    "Assethub": null,
    "Bitcoin": "bc1qqt3juqef9azhd0zeuamu9c30pg5xdllvmks2ja",
    "Ethereum": "0xacd7c0481fc71dce9e3e8bd4cca5828ce8302629",
    "Solana": "7zLEfU3nQKqnfrN2A5yNEiFd1Vt9D7maVaoSAV8invMT",
  },
  "role": "liquidity_provider",
  "vanity_name": "Chainflip Testnet LP BOOST",
}
`;

exports[`parsers > cfMonitoringSimulateAuction > parses the cfMonitoringSimulateAuction response 1`] = `
{
  "auction_outcome": {
    "bond": 105878276641377024847615n,
    "winners": [
      "cFJsekrfdseaawit8QfawEWRvD5ypJmLpfFtjpVEcLA2v7bnw",
      "cFM8di6AYc4G8xw651A2dBeeQk4bitasmoukjQQDZZiH84FvC",
      "cFNGw7pdYv18TSNtMMq3LjbpwryNtXnhkbESTLPMvxpMLDa54",
      "cFNQUoqZSCiMkSYnpyqY7FecsmbBWKtSad2JTFdx5CGhuBwst",
      "cFNyy169p7yCy3F9p4bb7mW27Tse3F1v8hw8yTv21Qzwq23xW",
      "cFKzr7DwLCRtSkou5H5moKri7g9WwJ4tAbVJv6dZGhLb811Tc",
      "cFP2cGErEhxzJfVUxk1gHVuE1ALxHJQx335o19bT7QoSWwjhU",
      "cFNzzoURRFHx2fw2EmsCvTc7hBFP34EaP2B23oUcFdbp1FMvx",
      "cFJ1nYWjLSkCR5VRSe772dT4g9LdUXkwaY7NeJ88Pxbs3JSng",
      "cFN6WZTWr2LDpVKb9r4PYwJjXiVSG2CGfPSe5W3FrxKtNbw5B",
      "cFKTjtJ6AhUeVXbneHGNBJaSv9dutqtLZStWKn1bLD2Q2HYD3",
      "cFKbFLbr6HfsXWSVuDvGumsPfzUFq83GaYzKR2Lo7nUo1ERU8",
      "cFNJaJY6mhN1tW5EsquPrF6i84VXfJTKcCJUvXs8cA2na4NyX",
      "cFLgNE8F5DgnPQYyCz5QVHtkqACnSpier99FVpQ8dvsUxMJH1",
      "cFJut1N2voqFyTkyS9pvLHU8hAjoW3DhtJwu1nBViDg5UJpmr",
      "cFKFTjma1tAC6uUiQNi945ZaRZmuvUHStZiaB3sGE9FGtzzMP",
      "cFLvGaVfM14RsENmMmBhbZ2xojWd9Yw34EkN5KSTbtaySDMpk",
      "cFPJHm4J2JB9PiSGzznqR1bSH5TLLBuhbobGBG8JeaZKPQpsB",
      "cFNbDVH1VvmyXxiePc1gUNoK5qUBY1p9vciG4csjQytPs4A9s",
      "cFJ4JRTEibZsr6syJUNrcCzutk8geCyK1r6QAYDNhBFeu4hWX",
      "cFLZ2u7X95WWmnttZRmE5NRK5YF2QVx2zjw9b9ecYY7LZTYey",
      "cFJFhb2foTmKytTm3cBfNSpmuZq98qN2sJSgUp6Jc7bpcsYoa",
      "cFJeBpvLSsRjP2EqepVrQ2YEjbpWuKMcLEbTUitsVnK1AYMn7",
      "cFLGYzkSMpNpwXCxcPFMF75mnpdVcfjFYPfBGmu2FejD89Gqs",
      "cFNmXo3vR6m3tgST1XxtF5qj3zFhX8PjkBioQhrfSLHD61c2G",
      "cFJALYBpteTbTxiSXY4yTqeFSUk9gu3msnGLzYtRqkATax2ML",
      "cFNoNzN3Fs3LA6X51QeWpkCUyTTQh1dm5bQZjr9Foa3LcMJPg",
      "cFMdwXDRcw7473DZfu5rbbGVXWuH9g8PWEjsKpLFXXAfj4f26",
      "cFMEJC2M9St9DNioRhHxzW1cztZWbgLYQcBMpa3XNL55vwdge",
      "cFJ28hBV2oB9QFpLXPTvSnxQZUoK9d7enhBvVg5ePNtqBZYxS",
      "cFNGozRV7gmgaqYy1cRkWoekT7twozEvZvSLUs8fJ5KshhPFH",
      "cFJ7XCcJWQVNcqBq9VvuGJFzFzBc7JAZsS3AUwSgpvn69hTJe",
      "cFNMGMKwbVvXfRb2ajow2UAGSbwqF27buJjAZsJLmm89TcnFK",
      "cFKHRAXwya68XKsLt38nXvAQuvVLrvcQQXqVqWW4Xwgoy3K24",
      "cFLmzdkYF3srdEgw63ZyLDgC1GaNGmJANtLq7FpZhXgcHgXtu",
      "cFMbMvLCJ8EcP5dMdDGQQzugsuNA8fPacCNnP2kFnFQfxbSsF",
      "cFK6rfXbcQpFtr2i3SVnUb3zyzAvFPjcnNfc7cjU9h8pRCPxK",
      "cFJ1RVHBMeDBPmTeUHASV8KecsMjoMuw8YtbuXDUYzT81j58L",
      "cFJS97PZpzotGcVSEEXz2kd9SasoVwSv36jVhj4AV1K7zckWM",
      "cFMmKTs7v3mB26Es69bqXi5BzY7wX3w3Qku2pWERodFeretFc",
      "cFKt3QuFWMu1qi9ALQGM1xMEnyG1audLGHxA8owAHtJSkkDxZ",
      "cFMR1aY13XXcT2c2Tw5iZjXK2weSu17ciKN1opyqjp27EyJWC",
      "cFJvKR8kksK5hQVV8VvDZMPhqWv1PGMgAucd78jDaYrteVnpz",
      "cFMujS4pmKEHNBLv3MBFdYhHrXEdZSqC1dC8gDpbLfTSXkm7Q",
      "cFJsWiyENNhf6Ecz4mLrRdNSukWQ5gTFmm5QD4xp1Y2KMDZrx",
      "cFPSK6NHHHjikURRVDYaqWrubF3upooBHZP6SsfzQFtSwZny8",
      "cFLYYq49rwcXpBB4NZGp5gbygczC17PwHXfXd661ZBaCuj8Ej",
      "cFL4anfBihmuU8CA76SPsgqpqnFzEUWofvPDaBCHXvzNWCdiH",
      "cFJnhCKD6bTZUEoR5XWVENxLLAEaHE3FFHqiEukPKgSZ6JpPk",
      "cFKj1axChhNCf6sK3vDQFUcG47kzASxgKA2kk4MLAeCUhbCzK",
      "cFK731N7CtYBMMP1XVqZwDmdXkws5h1pTX5znTZfCyYGerXfj",
      "cFLRBhSqFP6WcM22WFDCYUAMCYVfs8yeE2BQsQRTnDvFkaWXp",
      "cFPS8Hyg7DNRdB4K2wa4r91VQUUk87ju6BPrPHBX5G1JXzHVg",
      "cFJRMMBQKkHPRAdYqKsmYjn5bJkpMsBBFvZAFGoHagWKRwt7k",
      "cFJ9S4bNQA9xwSJ77aJL3zF7KDZ8wY5374D5vzy4fTJNcEDK8",
      "cFNyzTAXBDKrwYbVt92B8xms8v9iWQR7mqF3eKtVF5EwsveUD",
      "cFMzeRz3HPcQjGLZVZgJgMB2U9omuFese2fevA2txnFBz7W8D",
      "cFKmjxksziUY7NqVtHwmwYkrqMkoCZqmCSrUm8ou2coU8eZCN",
      "cFNxRCi9pMkRBFNnqRwf2NfkWMydD3jsPYQ6jpzmTfML4vMaK",
      "cFK7A8ifq8Sa84z37ecAUyQcXA2JN5oCp5RCXJRRJb7epNs1a",
      "cFNpZZ3Vrs42WWn5N5WeMWiQnEzVrE7bP19fBi74eQZaHzp1c",
      "cFKPDtjPAkJXwzjvAwECptcj4G7qa4YhufjDbtSRNKdoEGDTU",
      "cFK8xyWtqeJQmgAprXJmdwQfPivp48ZpY3ADT7arBGZviGpoY",
      "cFLHaJXsxqXKe4KRSYh7sCXFwgxH8WyWpHXyUfssFgpVB6GTz",
      "cFMK7CdXJ5HxXxm7Purbsy4uaSSHMS9H9SxZ5GqNVsGJ9vbqY",
      "cFNpUERkeV3G9jFVHFY5RZ1Fdnzk73RWnTx2Wh2FVgnmGfPAA",
      "cFHtajnc4AtU8hUxreVox1cdtps5iFSEjBjYWWmJ2KbiwknG6",
      "cFL4VXtbCF1Qb4zcn1fuxFsXKSVikTdm8SnbjMjz2zKWBgagk",
      "cFNDLvLfWQtXGxpyvLCJq3HFQ7bmGPzsoCADBvooq9d5WoJCu",
      "cFHxoRsDtuBjiehbXXoJU4gSbzKyzxpFQHyDKLC8kx5sZx137",
      "cFPVFJj8pyyKaUfVcU9rxociqo9hfdR8U9VwkKLMPpuyb3Y39",
      "cFKvnYcqWdDWsr4s7hkqkhZBFnDGw2njoptsDquj3tWbearpE",
      "cFM9J9Q1sdyGeLEbTwYwQjZ1DKfeuLWtBxh3mRYTxUJNTJCkU",
      "cFM6rbhVdzxbxQJLuhmB93S1rnFdV6ZBw6xoGCGctDoQ7wPii",
      "cFLGdfyeHVFkszsXvEe5bRzyR3jmhNoJRhs5R7TPjnBktpnU9",
      "cFMYeqjpvcp5aMiPoPXpPGr1NPh4rwAuueeTg42UPTxq4GYKM",
      "cFLvTNQnLQzGG1VwXf9Zi74FCx6eis7tMdhe1pVGzgfVYFrm7",
      "cFLpBaBLy7NKB3x9wezzbD8PGZmnwcY9H5XJG9Dc5w8hbpnwB",
      "cFJsut73WRtQoTZEoPCorciWXdH7kjgMYPRigPhtP2ZYutUMB",
      "cFNrDEGLY2RGwwAWkQt3AqSuLdyzBXGoZz9guhGsGJjKq3N7J",
      "cFJPKGymwmw7juXZ2tx9h6qas6jFBtJrXtGVqELMe456VoNqJ",
      "cFNSYvGBn1HYFu1w52UneqdLxqmEHQn8W8LyN8X2KWKjwnDFc",
      "cFLuJszP5dVbmzZWMmFM7RzARHBS6FLEj9ph4Q3njKMXJL337",
      "cFLxY1w3iA1J8s8vYkJTm34FsktKsaMRvgtm7YkxVvXhMfvCa",
      "cFLmx6fwm5hiDGn55fRMiDncdiWiYhXza2fwR5YrTbMNxTxLT",
      "cFK1uwMSV7fXbUzYbmNfuLDQ6wGBfvNat7o8HHib9MuVqvjG3",
      "cFLsUrBgEKVG8UC8EXJzJ6T7uXV7SbdG1q15y1R7vSQCQfebk",
      "cFMu4ApyiukD7HJzWTBSEdkRFC1qZNMR6Vd8ie5EDtbr4sbRs",
      "cFKvfyCJqPWKuAhQw1kBsdd3SLi93o35ZLUu2kDN9gTGa44q4",
      "cFNmLrZUMfUh4ipnaX7de68ckGmxvyV4KFVh2uSLrCnFeo9Xc",
      "cFMGJRoFh1g5fkeHBvpi6LDWHtiYXSomkEx6LEjhUggiMxjfE",
      "cFPMZgK6tjJLwLgsEGJ4eosnUoi4gU3pxyn6omSGsMnqqDx4N",
      "cFLuZxzxXZ67Wfd6o5qbYy3cWMzgEjgjMXvCb2UDib5kWJGGu",
      "cFJsoLo4SBosvs3T4TEw6Y87B673AtnaFyrNpfQFrb6knQ7RK",
      "cFK4nsMckUPwymP8zBxfD2H4wxigTcMPf8PEKmcuBXiTxopzv",
      "cFMp7HxQnfsEPbooWRFE7iHqgsQY5ea6Vp6ZFVUzmtThzK3Wb",
      "cFMKkuKL4mWP8mKwdMxGemrp9uX4tkH35RJ9gHRL57pzmDWxj",
      "cFNjKj9J1EcMoYVxR2L9uq7rk32BLk4BukyrLNumVpZXQ8KTB",
      "cFNuffnVYGYV5NxvoCtZtnvdntks7d7ikf4Nxrafc1Z65LvKG",
      "cFJvPsxxiKdDfkLngwPixnzBKuNfkipf5efTemAV2V9XiW9EW",
      "cFPamRv6tc894YqRsDrEwfLwAwqk9Pu5PhEGqcfPjT7mM39E7",
      "cFLTXkjcs9Zz5zWpwLYmhV5Sm7vUAQwA9Pr34U8NPQLRzo4z1",
      "cFMY2CsgTZjRMvtnn4ygyeAdnJDuBA1jdu8UwnWMZ4TeqkzLJ",
      "cFLKbFDnSucw5w93xkXgDXH4XYVWxJ3RFEjQGhzuuT3ipvuGT",
      "cFPMTZ8p4R8km8hD1QQAexkjaLXqWhihyDpUzpASMwC4uAfhY",
      "cFJFLjdbLQHHCP5xsrWdPUQQiSCAyfZibM96VfWAHAdkgeDgE",
      "cFPQVxn15qJC3PgM71yahejwky8jPfQFb3XvrvfvKar8EWxXW",
      "cFKxiQf5v5bgCtgesN8WioTDz9g3Vp8yTZNaPTZbLYPbTBe1K",
      "cFJc34jBQSncn7YyfhpvW9h8UAg41UYv3HfpBXvBC6NvBM4tk",
      "cFJstpdoWUrws7oA7QvYVDevVH5ddBZnL7QJGSEEUU4WUserG",
      "cFNH12mtCf4mDHEvArkdKNbyTr6zWe6bcb3rAkvh5DmF4JV6B",
      "cFMVRCvCJ5vKd6cMoT6fQqp6UCcJmjxDSJ9eXDSDKrJWiGjtM",
      "cFKzn16Zx7vmxeV3DFeto8mM86PsZtsiNfonR571CqUJSgua8",
      "cFJ3zLQUc7vqm1d6ZM83qq6marFFmTC6oXuziMcaxfBV565P3",
      "cFLs3fraZbvASW4iAUaQXULGVaBwwb5626SkpYCLzCJEm5KQR",
    ],
  },
  "current_mab": 94379780087901672598196n,
  "new_validators": [
    "cFJsoLo4SBosvs3T4TEw6Y87B673AtnaFyrNpfQFrb6knQ7RK",
    "cFK4nsMckUPwymP8zBxfD2H4wxigTcMPf8PEKmcuBXiTxopzv",
    "cFKvfyCJqPWKuAhQw1kBsdd3SLi93o35ZLUu2kDN9gTGa44q4",
    "cFKzn16Zx7vmxeV3DFeto8mM86PsZtsiNfonR571CqUJSgua8",
    "cFLsUrBgEKVG8UC8EXJzJ6T7uXV7SbdG1q15y1R7vSQCQfebk",
    "cFLuZxzxXZ67Wfd6o5qbYy3cWMzgEjgjMXvCb2UDib5kWJGGu",
    "cFLvTNQnLQzGG1VwXf9Zi74FCx6eis7tMdhe1pVGzgfVYFrm7",
    "cFM6rbhVdzxbxQJLuhmB93S1rnFdV6ZBw6xoGCGctDoQ7wPii",
    "cFMGJRoFh1g5fkeHBvpi6LDWHtiYXSomkEx6LEjhUggiMxjfE",
    "cFNmLrZUMfUh4ipnaX7de68ckGmxvyV4KFVh2uSLrCnFeo9Xc",
    "cFPMZgK6tjJLwLgsEGJ4eosnUoi4gU3pxyn6omSGsMnqqDx4N",
  ],
  "operators_info": {
    "cFKBmsMXwSBEiyhiiNRqLwyzY8bBM2GCgLRXNUyNo4dCP6vTX": {
      "delegation_fee_bps": 1500,
      "delegators": {
        "cFHsUq1uK5opJudRDczuvR39wwBZvLX6DAYNnn7dV7CVW3enA": 5205900811805511029797n,
        "cFHsUq1uK5opJudRDd16u4BR72xaEtoxHxJMgfAL6W4Y8c39N": 32298323754811473671828n,
        "cFHsUq1uK5opJudRDd1B1qAXyqw8AuJYkQyHx6NzAWcfspWDo": 30000000000000000000000n,
        "cFHsUq1uK5opJudRDd1GKGifVD8WTTmjHVZqgpMPYW5jNoRiu": 815057487861991306159n,
        "cFHsUq1uK5opJudRDd1U1y6YN1u9WbubzLyY9m1dyqPue85KD": 5881886835488873387989n,
        "cFHsUq1uK5opJudRDd1UMEYSVYqxjFmYC7XQwMzE5GGooXAHF": 8367894358275579070428n,
        "cFHsUq1uK5opJudRDd1mjeneqEmJpBSRqhvNqiHZR3WazJY2C": 40000000000000000000n,
        "cFHsUq1uK5opJudRDd1s9Acis2cvptq57VYvpSCtKJXm85bbg": 37331456964229124776541n,
      },
      "operator": "cFKBmsMXwSBEiyhiiNRqLwyzY8bBM2GCgLRXNUyNo4dCP6vTX",
      "validators": {
        "cFJ3zLQUc7vqm1d6ZM83qq6marFFmTC6oXuziMcaxfBV565P3": 95440921761137514233995n,
        "cFKzn16Zx7vmxeV3DFeto8mM86PsZtsiNfonR571CqUJSgua8": 20610610122236986405933n,
        "cFLs3fraZbvASW4iAUaQXULGVaBwwb5626SkpYCLzCJEm5KQR": 93053850792035214494814n,
        "cFMVRCvCJ5vKd6cMoT6fQqp6UCcJmjxDSJ9eXDSDKrJWiGjtM": 94467203677625831012976n,
      },
    },
    "cFKTvCPY4D2jdZULjtgphSDpRzyCHwPJcFhLaXLY9hPC463Xq": {
      "delegation_fee_bps": 1500,
      "delegators": {
        "cFHsUq1uK5opJudRDczoXtMszDUL6ngYvW3j7AcXHBeBYdgZ1": 4010793546039130935664n,
        "cFHsUq1uK5opJudRDczryUdfhU7KFpveE7y55M3yEQSyi2cvj": 12979836006464493615316n,
        "cFHsUq1uK5opJudRDczt8QhCrQVJ1v2nd84pobwAbBzv4z3WS": 230000000000000000000n,
        "cFHsUq1uK5opJudRDczufqbUwfXGyzn2tjcTQmfF4GSkoESMA": 1000000000000000000000n,
        "cFHsUq1uK5opJudRDczwZ3e7VJHH7K6ovcNpKbMGj8RrzFcHR": 31126639465347257374523n,
        "cFHsUq1uK5opJudRDd192c6YoAQUdDLQeqFhKZkKDEUxn3JPR": 101500354053688869503885n,
        "cFHsUq1uK5opJudRDd197Bw8yE3yvbF97ZEwCBbJnzLgc5Kj3": 13000000000000000000000n,
        "cFHsUq1uK5opJudRDd19EHeuggHgo5ss3NrBAQPg8JmSS9i5Y": 131148403362946576279190n,
        "cFHsUq1uK5opJudRDd19LXwMxEojGewqaqjvPRMH66kpwD8NP": 37108902440785616629647n,
        "cFHsUq1uK5opJudRDd1CXED8P7eodERgW5gDDAf1nHnAEHU3A": 1528040000000000000000n,
        "cFHsUq1uK5opJudRDd1EFLE9ZWxEZkLoQJbhpYjA1bYmT1FLX": 4000000000000000000000n,
        "cFHsUq1uK5opJudRDd1NMrwaxCe8Jq7ncj3QKnRYUiEFA3FSw": 3000000000000000000000n,
        "cFHsUq1uK5opJudRDd1Q9YMN8S8Az6w6pLBkiwfyi34Gsz4gC": 200000000000000000000n,
        "cFHsUq1uK5opJudRDd1Sjpf1n4FsCUK9xfMAPhXNRPs7e5J3j": 25016768758257320284995n,
        "cFHsUq1uK5opJudRDd1TANfvWbWXBTTJgnLpiNoBM69B5x6eW": 154330000000000000000000n,
        "cFHsUq1uK5opJudRDd1UE2yVAdGdYDkDWjCNYo5ZdgP4qS8Gz": 9000000000000000000000n,
        "cFHsUq1uK5opJudRDd1V6vAYxfAB3NChEUYMsLwe1D3HPyASn": 28675996909000535432968n,
        "cFHsUq1uK5opJudRDd1VfLCwjvRtWmdbiy26XBtWpF4EUjnNr": 8000000000000000000000n,
        "cFHsUq1uK5opJudRDd1WTaYFuJbF5SuwjRAWq315dFXWEF6tW": 25800000000000000000000n,
        "cFHsUq1uK5opJudRDd1XXX9XmMuXqMCrrAcCBqVjNhfAZHXEU": 12897373000000000000000n,
        "cFHsUq1uK5opJudRDd1agcXg6Gp9XgpccsnU7BuxmzVXpk72d": 949421000000000000000n,
        "cFHsUq1uK5opJudRDd1o4LAc3JVyGg1XvayEN7rxC7oHyDgmu": 85000000000000000000000n,
        "cFHsUq1uK5opJudRDd1qHCxK5S582TZU5gyzBttoUmizG4bny": 111000000000000000000n,
        "cFHsUq1uK5opJudRDd1qqEoJS3roLpxCb2Whf1qVeE63ypp5f": 18097291000000000000000n,
      },
      "operator": "cFKTvCPY4D2jdZULjtgphSDpRzyCHwPJcFhLaXLY9hPC463Xq",
      "validators": {
        "cFJsoLo4SBosvs3T4TEw6Y87B673AtnaFyrNpfQFrb6knQ7RK": 20000999957206282000000n,
        "cFK4nsMckUPwymP8zBxfD2H4wxigTcMPf8PEKmcuBXiTxopzv": 20010999730335467000000n,
        "cFKvfyCJqPWKuAhQw1kBsdd3SLi93o35ZLUu2kDN9gTGa44q4": 20000999925220199000000n,
        "cFLuZxzxXZ67Wfd6o5qbYy3cWMzgEjgjMXvCb2UDib5kWJGGu": 20010999730335467000000n,
        "cFMGJRoFh1g5fkeHBvpi6LDWHtiYXSomkEx6LEjhUggiMxjfE": 20000999282632223000000n,
        "cFNmLrZUMfUh4ipnaX7de68ckGmxvyV4KFVh2uSLrCnFeo9Xc": 20010999734196300000000n,
        "cFPMZgK6tjJLwLgsEGJ4eosnUoi4gU3pxyn6omSGsMnqqDx4N": 20007956856712922835186n,
      },
    },
    "cFMKGuLCxBtM9qsTwg9j4JkYc5dw7whs89kGxcwY2hSxX3wPn": {
      "delegation_fee_bps": 1500,
      "delegators": {
        "cFHsUq1uK5opJudRDczwbXw9CqYto8Tqzk7CUGwcHm9tBhDCt": 1600000000000000000000n,
        "cFHsUq1uK5opJudRDd1LHWW2t4w44zhCdz38eafV3smvAAMcR": 11449849041633913515371n,
        "cFHsUq1uK5opJudRDd1N3DX3n59XR9MUDYABmCuKSWpNCpzjA": 53410694789266475604969n,
        "cFHsUq1uK5opJudRDd1WuQheazmtcUkEAu8rXp8L18arwDqHo": 43097907209071826590663n,
      },
      "operator": "cFMKGuLCxBtM9qsTwg9j4JkYc5dw7whs89kGxcwY2hSxX3wPn",
      "validators": {
        "cFK1uwMSV7fXbUzYbmNfuLDQ6wGBfvNat7o8HHib9MuVqvjG3": 105085303954692774348241n,
        "cFLsUrBgEKVG8UC8EXJzJ6T7uXV7SbdG1q15y1R7vSQCQfebk": 54999999831814426000000n,
      },
    },
    "cFNZ9zdPs5kS6H3CiM5GHNDAkmWfhgRFDwZuaD1wzCCDA6kwZ": {
      "delegation_fee_bps": 1500,
      "delegators": {},
      "operator": "cFNZ9zdPs5kS6H3CiM5GHNDAkmWfhgRFDwZuaD1wzCCDA6kwZ",
      "validators": {
        "cFKpSepybpNpQ2iaWsjrBgLjmB6d1z1Y9DvQFUxBqvoxtitmF": 20061555067283399683796n,
      },
    },
  },
}
`;
